fix: image overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -153,3 +153,20 @@
     max-height: 100px;
 }
 
+.card {
+    /* width: 100%; */
+    padding: 0;
+}
+
+.card img{
+    padding: 0;
+    width: 100%;
+    height: 220px;
+
+}
+
+[class*="col-"]{
+    padding: 0px;
+}
+
+
